Donor slider now has See All & Donate links, and shows one slot on mobile layout. Includes special casing to avoid infinite loop when there's only one slot showing and user is hovering over it.

--- a/pegasus/sites.v3/code.org/public/css/donor_slider2.css
+++ b/pegasus/sites.v3/code.org/public/css/donor_slider2.css
@@ -16,10 +16,10 @@ h2 {
   border-radius: 0;
   background-color: rgb(255,255,255);
   margin-bottom: 10px;
-  margin-left:5px;
-  margin-right:5px;
+  margin-left:12px;
+  margin-right:12px;
   border-radius:5px;
-  width: 310px;
+  width: 313px;
 }
 
 .badge img {
